tests/positive/basic/contains_unicode/input.ci
void main() {
    print(toString(contains("café", "fé")) + "\n");
}
