tests/negative/semantic/wrong_arg_count_split/input.ci
void main() {
    print(toString(split("a")) + "\n");
}
